# pubmedapp

./: .gitignore  Dockerfile  README.md  go.mod  main.py  pyproject.toml  requirements.txt  start.sh
backend/: go.mod  main.go
backend/config/: config.go
backend/handlers/: handler_submit.go
backend/processing/: fetch.go  processing_test.go
frontend/: index.css  index.html  index.js
ml-service/: demo.py  ml_service.py  models.py
models/: demo.py  main.py  models.py
processing/: query.py
