[project]
name = "pubmedapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]